# xcbot

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  config.siliconflow.example.json  core_agent_lines.sh  docker-compose.proxy.yml  docker-compose.yml  pyproject.toml  siliconflow-models.md
.windsurf/rules/: dev.md  rule.md
bridge/: package-lock.json  package.json
bridge/src/: index.ts  whatsapp.ts
deploy/: apply-proxy.sh  apply.sh  config.template.json
deploy/nanobot/: .code_hash  config.json
deploy/nanobot/workspace/: AGENTS.md  SOUL.md  github-trending-50.md  rpa-libraries-research.md
deploy/proxy/mihomo/: config.yaml
examples/xhs-mcp/: docker-compose.yml
examples/xhs-mcp/data/: cookies.json
nanobot/: __main__.py
nanobot/agent/: __init__.py  context.py  loop.py  memory.py  plan_header.py  retry_policy.py  skills.py  subagent.py  task_anchor.py  wait_reminder.py
nanobot/bus/: queue.py
nanobot/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  registry.py  slack.py  telegram.py  whatsapp.py
nanobot/cli/: __init__.py  commands.py
nanobot/config/: schema.py
nanobot/cron/: __init__.py  service.py
nanobot/heartbeat/: __init__.py
nanobot/idle_consolidation/: service.py
nanobot/providers/: __init__.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py
nanobot/session/: __init__.py
nanobot/skills/: README.md
nanobot/templates/: AGENTS.md  ORCHESTRATOR.md  SOUL.md  TOOLS.md  USER.md
nanobot/utils/: __init__.py  helpers.py  media_cache.py
tests/: test_cli_input.py  test_commands.py  test_consolidate_offset.py  test_context_prompt_cache.py  test_cron_commands.py  test_cron_service.py  test_docker.sh  test_email_channel.py  test_heartbeat_service.py  test_matrix_channel.py  test_memory_consolidation_types.py  test_message_tool.py  test_message_tool_suppress.py  test_task_cancel.py  test_tool_validation.py
xcbot/: __init__.py
xcbot/agent/: loop.py  memory.py  skills.py  subagent.py  subagent_task_store.py
xcbot/bus/: __init__.py  events.py
xcbot/channels/: discord.py  matrix.py  mochat.py  qq.py  telegram.py
xcbot/cli/: commands.py
xcbot/config/: __init__.py  loader.py
xcbot/heartbeat/: service.py
xcbot/idle_consolidation/: service.py
xcbot/providers/: base.py  custom_provider.py  registry.py  transcription.py
xcbot/session/: manager.py
xcbot/skills/: README.md
xcbot/templates/: HEARTBEAT.md
(+38 files in other folders)
